# openagentworld-sandbox

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
agent_sandbox/: __init__.py
agent_sandbox.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
agent_sandbox/backends/: docker.py  e2b.py  local.py
agent_sandbox/integrations/: autogen.py  langchain.py
examples/: usage.py
openagentworld_sandbox/: __init__.py  exceptions.py  executor.py  scanner.py
openagentworld_sandbox/backends/: docker.py  e2b.py  firecracker.py  local.py
openagentworld_sandbox/integrations/: __init__.py  agno.py  autogen.py  camel.py  crewai.py  dspy.py  haystack.py  langchain.py  llamaindex.py  openmanus.py  semantickernel.py  smolagents.py
openagentworld_sandbox/security/: profiles.py
tests/: test_core.py
