[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-sandbox"
version = "0.1.0"
description = "A lightweight, framework-agnostic safe code execution library for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "openagentworld", email = "xeyronox.reseaech@proton.me" }
]
keywords = ["ai", "agents", "sandbox", "code-execution", "llm", "autogen", "langchain"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core has NO mandatory dependencies — keep it lightweight
dependencies = []

[project.optional-dependencies]
docker = ["docker>=7.0.0"]
e2b = ["e2b-code-interpreter>=1.0.0"]
autogen = ["autogen-agentchat>=0.4.0"]
langchain = ["langchain-core>=0.2.0"]
all = [
    "docker>=7.0.0",
    "e2b-code-interpreter>=1.0.0",
    "autogen-agentchat>=0.4.0",
    "langchain-core>=0.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/openagentworld/agent-sandbox"
Repository = "https://github.com/openagentworld/agent-sandbox"
Issues = "https://github.com/openagentworld/agent-sandbox/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["agent_sandbox*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
