[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openagentworld-sandbox"
version = "0.1.2"
description = "A lightweight, framework-agnostic safe code execution library for AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [
    { name = "openagentworld", email = "xeyronox.research@proton.me" }
]
keywords = ["ai", "agents", "sandbox", "code-execution", "llm", "autogen", "langchain", "crewai", "llamaindex", "smolagents"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Core has NO mandatory dependencies — keep it lightweight
dependencies = []

[project.optional-dependencies]
docker = ["docker>=7.0.0"]
e2b = ["e2b-code-interpreter>=1.0.0"]
autogen = ["autogen-agentchat>=0.4.0"]
langchain = ["langchain-core>=0.2.0"]
crewai = ["crewai>=0.100.0"]
llamaindex = ["llama-index-core>=0.12.0"]
smolagents = ["smolagents>=1.0.0"]
agno = ["agno>=1.0.0"]
camel = ["camel-ai>=0.2.0"]
dspy = ["dspy-ai>=2.5.0"]
haystack = ["haystack-ai>=2.9.0"]
semantickernel = ["semantic-kernel>=1.20.0"]
all = [
    "docker>=7.0.0",
    "e2b-code-interpreter>=1.0.0",
    "autogen-agentchat>=0.4.0",
    "langchain-core>=0.2.0",
    "crewai>=0.100.0",
    "llama-index-core>=0.12.0",
    "smolagents>=1.0.0",
    "agno>=1.0.0",
    "camel-ai>=0.2.0",
    "dspy-ai>=2.5.0",
    "haystack-ai>=2.9.0",
    "semantic-kernel>=1.20.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.urls]
Homepage = "https://github.com/openagentworld/openagentworld-sandbox"
Repository = "https://github.com/openagentworld/openagentworld-sandbox"
Issues = "https://github.com/openagentworld/openagentworld-sandbox/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["openagentworld_sandbox*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
# Select rules for linting
# E: Error, F: Pyflakes, W: Warning
select = ["E", "F", "W"]
ignore = ["F401"] # Ignore unused imports (common in library __init__)
